Fix server list dialog network order not being preserved across restarts.

BUG:218784